# numpy-sample_dtypes

./: .gitignore  .pre-commit-config.yaml  README.md  meson.build  pyproject.toml  setup.py
.github/workflows/: test.yml
sample_dtypes/: __init__.py  scalar.py
src/: common.h  dtype.c  dtype.h  dtypes.cc  main.c  numpy.cc  numpy.h  some_dtype.h
tests/: test_import.py  test_register.py
